<resources>
    <string name="app_name">C O U N T D O W N</string>
    <string name="vowels">Please enter how many vowels you want</string>
    <string name="reset">Reset Vowels</string>
    <string name="start">Play Countdown!</string>
    <string name="submit">submit</string>
    <string name="error">Youre answer is not correct:  </string>
    <string name="Congratulations">Well Done!, You have Received:   </string>
    <string name="action_countdown">Countdown</string>
    <string name="action_Scoreboard">Scoreboard</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="title_activity_home">C O U N T D O W N</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">I am lazy and cant come up with a better name</string>
    <string name="nav_header_subtitle">VoteSinnFein@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total Score: </string>
    <string name="gamestart">Timer Started! You now have 30 Seconds to complete the challenge</string>
    <string name="gameend">Time is up!, With answer you have you scored: </string>

    <string name="menu_countdown">Play CountDown!</string>
    <string name="menu_history">History</string>
    <string name="menu_leaders">Leaderboard</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Log-out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
